--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -11,13 +11,25 @@
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc -p . --noEmit",
     "prettier": "prettier --check .",
-    "prettier:write": "HUSKEY=1 prettier --write ."
+    "prettier:write": "HUSKEY=1 prettier --write .",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build",
+    "storybook:preview": "npx http-server storybook-static -a localhost -p 6007"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-essentials": "^8.1.6",
+    "@storybook/addon-interactions": "^8.1.6",
+    "@storybook/addon-links": "^8.1.6",
+    "@storybook/addon-onboarding": "^8.1.6",
+    "@storybook/blocks": "^8.1.6",
+    "@storybook/react": "^8.1.6",
+    "@storybook/react-vite": "^8.1.6",
+    "@storybook/test": "^8.1.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -27,9 +39,16 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "prettier": "^3.3.1",
+    "storybook": "^8.1.6",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.12.0",
     "vite": "^5.2.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
