--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -17,6 +17,7 @@
     "storybook:preview": "npx http-server storybook-static -a localhost -p 6007"
   },
   "dependencies": {
+    "@mantine/core": "^7.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -40,6 +41,9 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.1",
     "storybook": "^8.1.6",
     "typescript": "^5.2.2",
