feat: ネストしているC/Pの例を実装

--- a/apps/lightweight-storybook/tsconfig.json
+++ b/apps/lightweight-storybook/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
@@ -20,7 +24,10 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "@types/*"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
