--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -17,9 +17,14 @@
     "storybook:preview": "npx http-server storybook-static -a localhost -p 6007"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@tanstack/react-query": "^5.40.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "valibot": "^0.31.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
