--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc -p . --noEmit",
     "prettier": "prettier --check .",
-    "prettier:write": "HUSKEY=1 prettier --write .",
+    "prettier:write": "prettier --write .",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "storybook:preview": "npx http-server storybook-static -a localhost -p 6007"
@@ -54,10 +54,5 @@
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.12.0",
     "vite": "^5.2.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
