--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -20,10 +20,14 @@
     "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.40.1",
+    "class-variance-authority": "^0.7.0",
+    "lucide-react": "^0.390.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "tailwindcss-animate": "^1.0.7",
     "valibot": "^0.31.0"
   },
   "devDependencies": {
@@ -41,6 +45,8 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.2",
@@ -51,6 +57,8 @@
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.1",
     "storybook": "^8.1.6",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.12.0",
     "vite": "^5.2.0"
