--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
-    "@mantine/core": "^7.10.1",
-    "@mantine/hooks": "^7.10.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.40.1",
     "class-variance-authority": "^0.7.0",
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "tailwindcss-animate": "^1.0.7",
-    "valibot": "^0.31.0"
+    "valibot": "^0.31.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
@@ -53,8 +54,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.38",
-    "postcss-preset-mantine": "^1.15.0",
-    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.1",
     "storybook": "^8.1.6",
     "tailwind-merge": "^2.3.0",
