--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.40.1",
     "class-variance-authority": "^0.7.0",
@@ -37,6 +38,7 @@
     "@storybook/addon-interactions": "^8.1.6",
     "@storybook/addon-links": "^8.1.6",
     "@storybook/addon-onboarding": "^8.1.6",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/blocks": "^8.1.6",
     "@storybook/react": "^8.1.6",
     "@storybook/react-vite": "^8.1.6",
