--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -14,7 +14,9 @@
     "prettier:write": "prettier --write .",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "storybook:preview": "npx http-server storybook-static -a localhost -p 6007"
+    "storybook:preview": "npx http-server storybook-static -a localhost -p 6007",
+    "test": "vitest --run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -43,6 +45,9 @@
     "@storybook/react": "^8.1.6",
     "@storybook/react-vite": "^8.1.6",
     "@storybook/test": "^8.1.6",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -55,6 +60,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "happy-dom": "^14.12.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "storybook": "^8.1.6",
@@ -62,6 +68,8 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.12.0",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   }
 }
