--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.8.0",
     "happy-dom": "^14.12.0",
+    "jsdom": "^24.1.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "storybook": "^8.1.6",
