--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -31,8 +31,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "tailwindcss-animate": "^1.0.7",
-    "valibot": "^0.31.0",
-    "zod": "^3.23.8"
+    "valibot": "^0.31.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
