--- a/apps/lightweight-storybook/package.json
+++ b/apps/lightweight-storybook/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-devtools": "^5.52.2",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.390.0",
     "react": "^18.2.0",
